<resources>
    <string name="app_name">FLO Partner</string>
    <string name="RobotoBold">Appfont/Avenir_Heavy.ttf</string>
    <string name="RobotoRegular">Appfont/Avenir_Book.ttf</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_assign_booking">Assigned Booking</string>
    <string name="menu_manage_booking">Manage Booking</string>
    <string name="menu_incentive">Incentive</string>
    <string name="menu_accounting">Accounting</string>
    <string name="menu_rate">Rating</string>
    <string name="menu_third_party">Third-Party</string>
    <string name="menu_job_finder">Job Finder</string>
    <string name="menu_edu_video">Educational Video</string>
    <string name="menu_support">Support</string>
    <string name="menu_refer">Refer &amp; Earn</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="hints_mobile">Enter mobile number</string>
    <string name="mobile_number_error_mesage">Enter valid mobile number !</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="about_us_title">About Us</string>
    <string name="edu_video_title">Educational Video</string>
    <string name="we_have_a_gift_for_you_refer_your_friend_and_earn_a_10_discount_voucher_your_refernce_code_is_v52gs1">We have a gift for you! Refer your friend and earn a 10% discount voucher. Your refernce code is v52gs1</string>
    <string name="reference_code">Reference Code</string>
    <string name="about_us_text">
    <b><big>Who are we?</big></b>\n FOLIYOO, an aggregate maker between transporter and customer, lands with the intension of shifting products with an economical and statistical way. By according to E-Logistic management system we can solve the entire communication gaps and will provide the foremost solution with an easy manner. Foliyoo believes that, needs were never an issue, it was the service that made the needs access tougher. Hence we thought up to act as an aggregate between transporter and customer to resolve this problem. Automatically, the need for a simplified transportation is solved upon.\n
    <b><big>Why are we?</big></b>\n Yes, competitors are there but an advanced and additional service will allure users to us. Foliyoo is not only thinking about user but also taking keen steps to diminish exertion of drivers by implementing such emphatic attributes. By lessening cooling time of users we can make sure about proper delivery with safety precautions. The industrial sectors like Manufacturing Industry, Distribution Industry and Retailer Industry will be taken care of with high competent. Skilled operators and professionals are with us to deliver products like Construction equipments, Chemical products, Electrical as well as electronics appliances, alcoholic beverages, Home Appliances, Machine auto parts, packaged consumer box, Petroleum paint, and Pharmaceutical products.\n
    <b><big>Vision?</big></b>\n Consumer loyalty is our most extreme objective, and we meet it on numerous occasions through the steady execution of our basic beliefs, including trustworthiness, devotion and quality.\n
    <b><big>Our commitment?</big></b>As we believe this content is a huge responsibility, so that we give our customer significant serenity and help anyway we can to streamline their procedures and lighten pressure where conceivable. Our experts and cordial group will always relay on commitments and make customer the top priority.
    </string>
    <string name="enter_phone">Please enter your registered mobile number</string>
    <string name="enter_phone_subtext">We will send a verification code to your registered mobile number.</string>
    <string name="support">Support</string>
    <string name="enter_phone_number">Enter phone number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
