<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/nav_assign_booking"
        android:title="@string/menu_assign_booking" />
    <item
        android:id="@+id/nav_manage_booking"
        android:title="@string/menu_manage_booking" />
    <item
        android:id="@+id/nav_incentives"
        android:title="@string/menu_incentive" />
    <item
        android:id="@+id/nav_accounting"
        android:title="@string/menu_accounting" />

    <item
        android:id="@+id/nav_rating"
        android:title="@string/menu_rate" />
    <item
        android:id="@+id/nav_third_party"
        android:title="@string/menu_third_party" />
    <item
        android:id="@+id/nav_job_finder"
        android:title="@string/menu_job_finder" />
    <item
        android:id="@+id/nav_educational_video"
        android:title="@string/menu_edu_video" />
    <item
        android:id="@+id/nav_support"
        android:title="@string/menu_support" />
    <item
        android:id="@+id/nav_refer"
        android:title="@string/menu_refer" />
    <item
        android:id="@+id/nav_about_us"
        android:title="@string/menu_about_us" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout" />
</menu>
